2009-03-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Track api
	  changes.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.csproj: Don't local-copy project refs.

2009-03-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger.csproj: Moved text editor to core

2009-03-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Fix bug #478331
	  - Adding second (third, etc) variable to watch pad takes
	  type of first variable.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/DebuggingService.cs: Removed unused
	  CanDebugPlatform and rename CanDebugFile to CanDebugCommand.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/Extensions.cs:
	* MonoDevelop.Debugger/DebuggingService.cs:
	* MonoDevelop.Debugger/DebugExecutionHandlerFactory.cs:
	  Changed the way execution handlers work. We are not using
	  platform ids anymore. Instead, we use command strings when
	  looking for execution handlers. IExecutionHandlerFactory has
	  been removed and now everything is handled by
	  IExecutionHandler, which has a new CanExecute method. This
	  model is more simple and more generic.

2009-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger/DebuggingService.cs:
	* MonoDevelop.Debugger/BreakpointPropertiesDialog.cs:
	* gtk-gui/MonoDevelop.Debugger.BreakpointPropertiesDialog.cs:
	  Moved breakpoint properties dialog from MD.Ide. Disable
	  conditional and tracepoint options if they are not supported
	  by the project.

2009-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/Extensions.cs: Fixed NRE when the
	  current view does not have a file name. Fixes bug #480823 -
	  NRE when closing solution.

2009-03-02  Mike Krüger  <mkrueger@novell.com>
