@@ -1,3 +1,10 @@
+2009-03-21  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Debugger.csproj:
+	* MonoDevelop.Debugger/DisassemblyView.cs:
+	* MonoDevelop.Debugger/DebugTextMarker.cs: Fixed compilation
+	  error.
+
 2009-03-16  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Track api
